src/kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: onlineeventbookingumerkhan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service-1
          image: src-booking-service:latest
          imagePullPolicy: IfNotPresent # This tells Kubernetes to use the local image if available

          ports:
            - containerPort: 3002
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbookingumerkhan
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
