src/kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: onlineeventbookingumerkhan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service-1
          image: src-event-service:latest
          imagePullPolicy: IfNotPresent # This tells Kubernetes to use the local image if available

          ports:
            - containerPort: 3001
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbookingumerkhan
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
