src/kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: onlineeventbookingumerkhan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service-1
          image: umerkhan2003/src-user-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: onlineeventbookingumerkhan
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 3000 # Exposes port 3000 for internal communication
      targetPort: 3000 # Forwards to the container's port 3000
  type: ClusterIP # Internal service accessible within the cluster
