src/kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-service
  namespace: onlineeventbookingumerkhan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-service
  template:
    metadata:
      labels:
        app: mongo-service
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          command: ["mongod", "--bind_ip_all", "--noauth"]
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: onlineeventbookingumerkhan
spec:
  selector:
    app: mongo-service
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
