src/kubernetes/rabbit-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-service
  namespace: onlineeventbookingumerkhan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-service
  template:
    metadata:
      labels:
        app: rabbitmq-service
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672 # Default RabbitMQ port for messaging
            - containerPort: 15672 # Management UI port
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: onlineeventbookingumerkhan
spec:
  selector:
    app: rabbitmq-service
  ports:
    - name: amqp-port
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management-port
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
