src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: onlineeventbookingumerkhan
spec:
  ingressClassName: nginx
  rules:
    - host: umer.devops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3000
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 3001
          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 3003
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3004
          - path: /bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 3002
          - path: /rabbitmq
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672 # RabbitMQ management UI port
  tls:
    - hosts:
        - umer.devops.com
      secretName: myapp-tls
